# benchlite

./: .gitignore  CMakeLists.txt
include/expts/: 1-allocation.cpp  2-locality.cpp  3-growth_v1.hpp  4-access.cpp  5-ordering.cpp  growth.hpp
include/utils/: event_manager.hpp  experiments.hpp  general.hpp  run_manager.hpp  timer.hpp
scripts/: run.bat  run.sh
source/: main.cpp  main_v1.cpp  main_v2.cpp  main_v3.cpp  main_v4.cpp  main_v5.cpp
source/utils/: event_manager.cpp  run_manager.cpp  timer.cpp
